# NETTUI

./: CLAUDE.md  README.md  pyproject.toml
assets/: nettui.desktop
src/nettui/: __main__.py  aliases.py  app.py  app.tcss  models.py  settings.py
src/nettui/networkd/: __init__.py  exceptions.py  interfaces.py  parser.py  reload.py  writer.py
src/nettui/screens/: alias_editor.py  confirm_dialog.py  connection_editor.py  connection_editor.tcss  diagnostic_screen.py  interface_list.py  interface_list.tcss  profile_list.py  profile_list.tcss  settings_screen.py
src/nettui/widgets/: interface_detail.py  interface_table.py  network_form.py  profile_table.py  status_bar.py
tests/: test_aliases.py  test_interface_detail.py  test_interfaces.py  test_models.py  test_parser.py  test_writer.py
tests/fixtures/: dhcp.network  static.network
