[project]
name = "nettui"
version = "0.1.0"
description = "TUI for managing systemd-networkd connections"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
]

[project.scripts]
nettui = "nettui.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "pytest-asyncio>=0.23",
    "textual-dev>=0.80.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nettui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
